// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardContext should aggregate metric API calls: aggregated calls, error 1`] = `
{
  "data": {
    "dolor": {
      "data": [],
      "id": "dolor",
      "meta": {},
    },
    "ipsum": {
      "data": [],
      "id": "ipsum",
      "meta": {},
    },
  },
  "dataSets": [
    {
      "data": [],
      "id": "ipsum",
      "meta": {},
    },
    {
      "data": [],
      "id": "dolor",
      "meta": {},
    },
  ],
  "error": true,
  "fulfilled": false,
  "pending": false,
}
`;

exports[`GraphCardContext should aggregate metric API calls: aggregated calls, fulfilled 1`] = `
{
  "data": {
    "dolor": {
      "data": [],
      "id": "dolor",
      "meta": {},
    },
    "ipsum": {
      "data": [],
      "id": "ipsum",
      "meta": {},
    },
  },
  "dataSets": [
    {
      "data": [],
      "id": "ipsum",
      "meta": {},
    },
    {
      "data": [],
      "id": "dolor",
      "meta": {},
    },
  ],
  "error": false,
  "fulfilled": true,
  "pending": false,
}
`;

exports[`GraphCardContext should aggregate metric API calls: aggregated calls, fulfilled error 1`] = `
{
  "data": {
    "dolor": {
      "data": [],
      "id": "dolor",
      "meta": {},
    },
    "ipsum": {
      "data": [],
      "id": "ipsum",
      "meta": {},
    },
  },
  "dataSets": [
    {
      "data": [],
      "id": "ipsum",
      "meta": {},
    },
    {
      "data": [],
      "id": "dolor",
      "meta": {},
    },
  ],
  "error": false,
  "fulfilled": true,
  "pending": false,
}
`;

exports[`GraphCardContext should aggregate metric API calls: aggregated calls, fulfilled pending 1`] = `
{
  "data": {
    "dolor": {
      "data": [],
      "id": "dolor",
      "meta": {},
    },
    "ipsum": {
      "data": [],
      "id": "ipsum",
      "meta": {},
    },
  },
  "dataSets": [
    {
      "data": [],
      "id": "ipsum",
      "meta": {},
    },
    {
      "data": [],
      "id": "dolor",
      "meta": {},
    },
  ],
  "error": false,
  "fulfilled": false,
  "pending": true,
}
`;

exports[`GraphCardContext should aggregate metric API calls: aggregated calls, pending 1`] = `
{
  "data": {
    "dolor": {
      "data": [],
      "id": "dolor",
      "meta": {},
    },
    "ipsum": {
      "data": [],
      "id": "ipsum",
      "meta": {},
    },
  },
  "dataSets": [
    {
      "data": [],
      "id": "ipsum",
      "meta": {},
    },
    {
      "data": [],
      "id": "dolor",
      "meta": {},
    },
  ],
  "error": false,
  "fulfilled": false,
  "pending": true,
}
`;

exports[`GraphCardContext should aggregate metric API calls: aggregated calls, pending error 1`] = `
{
  "data": {
    "dolor": {
      "data": [],
      "id": "dolor",
      "meta": {},
    },
    "ipsum": {
      "data": [],
      "id": "ipsum",
      "meta": {},
    },
  },
  "dataSets": [
    {
      "data": [],
      "id": "ipsum",
      "meta": {},
    },
    {
      "data": [],
      "id": "dolor",
      "meta": {},
    },
  ],
  "error": false,
  "fulfilled": false,
  "pending": true,
}
`;

exports[`GraphCardContext should return specific properties: specific properties 1`] = `
{
  "DEFAULT_CONTEXT": [
    {
      "settings": {
        "isStandalone": false,
        "metric": undefined,
        "metrics": [],
      },
    },
    [Function],
  ],
  "GraphCardContext": {
    "$$typeof": Symbol(react.context),
    "Consumer": {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": [Circular],
    },
    "Provider": {
      "$$typeof": Symbol(react.provider),
      "_context": [Circular],
    },
    "_calculateChangedBits": null,
    "_currentRenderer": null,
    "_currentRenderer2": null,
    "_currentValue": [
      {
        "settings": {
          "isStandalone": false,
          "metric": undefined,
          "metrics": [],
        },
      },
      [Function],
    ],
    "_currentValue2": [
      {
        "settings": {
          "isStandalone": false,
          "metric": undefined,
          "metrics": [],
        },
      },
      [Function],
    ],
    "_threadCount": 0,
  },
  "useGetGraphTally": [Function],
  "useGraphCardContext": [Function],
  "useMetricsSelector": [Function],
}
`;
